update api register
